path_ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress1
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /makeup(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: makeup-svc
                port:
                  number: 80

          - path: /shoes(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: shoes-svc
                port:
                  number: 80

          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: error-svc
                port:
                  number: 80
